faults/virtual-service-ratings-test-fault.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
  - ratings
  http:
  - match:
    - headers:
        end-user:
          exact: robert
    fault:
      abort:
        percentage:
          value: 100.0
        httpStatus: 500
    route:
    - destination:
        host: ratings
        subset: v1
  - fault:
      delay:
        percent: 100
        fixedDelay: 20s
    route:
    - destination:
        host: ratings
        subset: v1
